cluster-apps/workloads/hajimari/hajimari.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: hajimari
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hajimari
    app.kubernetes.io/version: v0.2.0
    helm.sh/chart: hajimari-1.2.0
    helm.toolkit.fluxcd.io/name: hajimari
    helm.toolkit.fluxcd.io/namespace: default
  name: hajimari
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: hajimari
    app.kubernetes.io/name: hajimari
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: hajimari
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hajimari
    app.kubernetes.io/version: v0.2.0
    helm.sh/chart: hajimari-1.2.0
    helm.toolkit.fluxcd.io/name: hajimari
    helm.toolkit.fluxcd.io/namespace: default
  name: hajimari
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: hajimari
      app.kubernetes.io/name: hajimari
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        configmap.reloader.stakater.com/reload: hajimari-settings
      labels:
        app.kubernetes.io/instance: hajimari
        app.kubernetes.io/name: hajimari
    spec:
      containers:
        - env:
            - name: TZ
              value: UTC
          image: ghcr.io/toboshii/hajimari:v0.2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          name: hajimari
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /config/config.yaml
              name: hajimari-settings
              subPath: config.yaml
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: hajimari
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hajimari-config
        - configMap:
            name: hajimari-settings
          name: hajimari-settings
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.fabricesemti.net
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: weather-sunset
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app.kubernetes.io/instance: hajimari
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: hajimari
    app.kubernetes.io/version: v0.2.0
    helm.sh/chart: hajimari-1.2.0
    helm.toolkit.fluxcd.io/name: hajimari
    helm.toolkit.fluxcd.io/namespace: default
  name: hajimari
spec:
  ingressClassName: traefik
  rules:
    - host: hajimari.fabricesemti.net
      http:
        paths:
          - backend:
              service:
                name: hajimari
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hajimari.fabricesemti.net
      secretName: hajimari-tls
